@@ -41,7 +41,6 @@
 #pragma warning(disable: 4127)		// no 'conditional expression is constant' if qDebug() messages are removed
 #endif
 
-
 #pragma warning(push, 0)	// no warnings from includes - begin
 #include <QObject>
 #include <QApplication>
