@@ -73,8 +73,8 @@ IDI_ICON7               ICON                    ".\\img\\icons\\file-icon-raw.ic
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 3,2,0,228
- PRODUCTVERSION 3,2,0,0
+ FILEVERSION 3,2,1,230
+ PRODUCTVERSION 3,2,1,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -91,12 +91,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "TU Wien"
             VALUE "FileDescription", "nomacs - Image Lounge"
-            VALUE "FileVersion", "3.2.0.228"
+            VALUE "FileVersion", "3.2.1.230"
             VALUE "InternalName", "nomacs.exe"
             VALUE "LegalCopyright", "(C) 2011-2016, Markus Diem, Stefan Fiel, Florian Kleber"
             VALUE "OriginalFilename", "nomacs.exe"
             VALUE "ProductName", "nomacs"
-            VALUE "ProductVersion", "3.2.0.0"
+            VALUE "ProductVersion", "3.2.1.0"
         END
     END
     BLOCK "VarFileInfo"
