@@ -2,6 +2,6 @@
 <Package>
     <DisplayName>Plugins [x64]</DisplayName>
     <Description>Select [x64] plugins to install</Description>
-    <Version>3.2.0-3</Version>
-    <ReleaseDate>2016-05-06</ReleaseDate>
+    <Version>3.2.0-5</Version>
+    <ReleaseDate>2016-06-28</ReleaseDate>
 </Package>
